# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.bak  Dockerfile1.bak  spec.yaml
.sqlx/: query-ed279fc2dda0c3ede3e81a4500fcaa9da2220f8a9ad6c1debc3095deb9f84759.json
configuration/: base.yaml  local.yaml  production.yaml
src/: configuration.rs  email_client.rs  lib.rs  logging.rs  main.rs  startup.rs  telemtry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
