[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
default-run = "zero2prod"

[lib]
path = "src/lib.rs"

[[bin]]
name = "new_sub"
path = "src/bin/new_sub.rs"

[[bin]]
name = "check_exsists"
path = "src/bin/check_exsists.rs"

[dependencies]
actix-web = "4.14.0"
tokio = { version = "1.52.3", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
] }

# NOTE: specifically added "offline" flag for integration with
# Docker containers
sqlx = { version = "0.9.0", features = [
  "macros",
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
serde = { version = "1.0.228" }
serde_json = "1.0.150"
config = "0.15.25"
uuid = { version = "1.23.4", features = ["v4"] }
chrono = "0.4.45"
log = "0.4.33"
env_logger = "0.11.11"
reqwest = { version = "0.13.4", features = ["json"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.4"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.22"

# not included in the final binary
[dev-dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
